--- a/header.html
+++ b/header.html
@@ -9,9 +9,6 @@
 </head>
 <body>
   <!-- Sidebar/menu -->
-  <!-- Would removing w3-collapse and w3-animate-left fix the mobile problem	
-  <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
-  -->
   <div class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <!-- Button class for button inside sidebar -->
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
@@ -29,18 +26,13 @@
       <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
       <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
-      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
-      <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a>
+      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>
       <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>
-      <!-- sidebar links -->
+      <!-- <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a> -->
+     <!-- sidebar links -->
     </div>
   </div>	
   	
-  <!-- Let me see if commenting out this overlay effect on mobile small screens will permanently dispaly the sidebar on mobile -->
-  <!-- Overlay effect when opening sidebar on small screens -->
-  <!--	
-  <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-  -->
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 	
   <!-- !PAGE CONTENT! -->
@@ -58,7 +50,7 @@
     </div>
   </header>
 
-   <!-- Empty Body for this webpage -->	  
+  <!-- Empty Body for this webpage -->	  
 	  
   <!-- Footer -->
   <footer class="w3-container w3-padding-32 w3-dark-grey">
