--- a/header.html
+++ b/header.html
@@ -32,7 +32,8 @@
      <!-- sidebar links -->
     </div>
   </div>	
-  	
+
+  <!-- Overlay effect when opening sidebar on small screens -->	
   <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 	
   <!-- !PAGE CONTENT! -->
