--- a/labs.html
+++ b/labs.html
@@ -27,9 +27,9 @@
       <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Problem Statement</a>
       <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
-      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>      
-      <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a>
+      <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>
       <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>
+      <!-- <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a> -->      
       <!-- sidebar links -->
     </div>
   </div>
@@ -50,13 +50,7 @@
     <div class="w3-section w3-bottombar w3-padding-16">
     </div>
     </div>
-  </header>
-
-  <!-- The way with iframes, publish with in google docs. File, share, publish to web, embed -->
-  <!-- 	  
-  <h3>Lab 1 Version 1</h3>
-  <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ6VLX9-Fg8x9R7cSjOfFwdbQpw7TobyXPBd_VRErL60jImeyU735sXAt72BRsWgx3WB2R1_u5eu3Rt/pub?embedded=true" frameborder="0" width="960" height="569"></iframe>
-  -->
+  </header>  
 
   <h3>Lab 1 Version 1</h3>
   <iframe src="labsPDF/Lab 1 Version 1 Collaborative Outline.pdf" frameborder="0" width="960" height="569"></iframe>
