--- a/individual.html
+++ b/individual.html
@@ -27,8 +27,7 @@
       <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
       <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>
-      <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>
-      <!-- <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a> -->      
+      <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>            
       <!-- sidebar links -->
     </div>
   </div>		
@@ -51,7 +50,7 @@
     </div>
   </header>
 
-<!-- Going to put the list here -->	  
+ <!-- List of team members here -->	  
  <h3>Kelsey Marantan</h3>
  <h3>Lab 1 Version 1</h3>
   <iframe src="individualPDF/Lab1V1_KelseyMarantan.pdf" frameborder="0" width="960" height="569"></iframe>
