--- a/labs.html
+++ b/labs.html
@@ -28,8 +28,7 @@
       <a href="solution.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Solution</a>
       <a href="presentations.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Presentations</a>
       <a href="labs.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Labs</a>
-      <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>
-      <!-- <a href="prototype.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Prototype</a> -->      
+      <a href="individual.html" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Individual</a>           
       <!-- sidebar links -->
     </div>
   </div>
@@ -64,7 +63,7 @@
   <h3>Lab 2 - Section 3 v2</h3>
   <iframe src="labsPDF/Lab 2 Group Section 3 v2.pdf" frameborder="0" width="960" height="569"></iframe>
 
-  <!-- Iframe doesn't work for github wiki -->	  
+  <!-- Iframe does not work for github wiki -->	  
   <h3>Lab 3 & 4 - User Manual</h3>
   <h4><a href="https://github.com/MonarchCourseExplorer/Prototype/wiki/" target="_blank">User Manual - Lab 3 & 4</a></h4>
     	  
